GNOME Bugzilla – Bug 772997
Search not cleared on clicking "View All"
Last modified: 2016-10-16 06:01:13 UTC
Steps to reproduce: 1. Enter a search string in text entry. Search results should be displayed. 2. Click 'View All'. All entries are displayed. 3. Change search to "Search Genres". All entries are not displayed. Looking into the code, it appears to be a regression of 'explicit mode' feature.
fixed in commit 0c3bb4c