source-toolbar: clear search text properly

The toolbar remembers the search text so it can support incremental
searches.  To do this properly it needs to forget its idea of the
search text when the search entry is cleared.

https://bugzilla.gnome.org/show_bug.cgi?id=772997